cast-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cast-db-pod
  labels:
    name: cast-db-pod
    app: microservice-app
spec:
  containers:
    - name: postgres
      image: postgres
      ports:
        - containerPort: 5432
      volumeMounts:
      - name: cast-db-storage
        mountPath: /var/lib/postgresql/data
  volumes:
  - name: cast-db-storage
    persistentVolumeClaim:
      claimName: cast-db-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: cast-db #the service name should be db as the worker and the result use name db to access postgres
  labels:
    name: cast-db
    app: microservice-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: cast-db-pod
    app: microservice-app
