cast-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-deployment
  labels:
    name: cast-deployment
    app: microservice-app
spec:
  replicas: 3
  selector: 
    matchLabels:
      name: cast-service-pod
      app: microservice-app
  template:
    metadata:
      name: cast-service-pod
      labels:
        name: cast-service-pod
        app: microservice-app
    spec:
      containers:
      - name: cast-service
        image: cast-service
        imagePullPolicy: Never
        ports:
          - containerPort: 8002

---

apiVersion: v1
kind: Service
metadata:
  name: cast-service
  labels:
    name: cast-service
    app: microservice-app
spec:
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: 8002
  selector:
    name: cast-service-pod
    app: microservice-app
