movie-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: movie-db-pod
  labels:
    name: movie-db-pod
    app: microservice-app
specs:
  containers:
    - name: postgres
      image: postgres
      ports:
        - containerPort: 5432
      volumeMounts:
            - name: movie-db-storage
              mountPath: /var/lib/postgresql/data
  volumes:
    - name: movie-db-storage
      persistentVolumeClaim:
        claimName: movie-db-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: movie-db #the service name should be db as the worker and the result use name db to access postgres
  labels:
    name: movie-db
    app: microservice-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: movie-db-pod
    app: microservice-app
