redis-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-db-pod
  labels:
    name: redis-db-pod
    app: microservice-app
spec:
  containers:
    - name: redis 
      image: redis
      ports:
        - containerPort: 6379
---

apiVersion: v1
kind: Service
metadata:
  name: redis-db #the service name should be db as the worker and the result use name db to access postgres
  labels:
    name: redis-db
    app: microservice-app
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    name: redis-db-pod
    app: microservice-app
