ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"  
spec:
  ingressClassName: "nginx"
  rules:
  - host: movie.example 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movie-service
            port:
              number: 8001 
  - host: cast.example 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cast-service
            port:
              number: 8002
